k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-clinica-service
  labels:
    app: backend-clinica
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: backend-clinica
    component: api
